# AudioRecorder

./: .gitignore  LICENSE  README.md  audio_recorder.py  config.yaml  pyproject.toml
